--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color: #05FC00;
-    font-family: "Discord";
+    font-family: 'Bebas Neue', sans-serif;
     color: #FFFFFF;
     text-align: center;
 }
