--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #05FC00;
+    background-color: rgb(39, 39, 39);
     font-family: 'Uni Sans', sans-serif;
     color: #FFFFFF;
     text-align: center;
